Card column headers no longer overlap bubbles when scrolling

--- a/app/assets/stylesheets/card-columns.css
+++ b/app/assets/stylesheets/card-columns.css
@@ -131,7 +131,7 @@
     inset-block-start: 0;
     justify-content: center;
     margin-block-start: 1px;
-    margin-inline: calc(-1 * var(--cards-gap) + 1px);
+    margin-inline: -8px; /* enough to cover card shadows, but avoid overlapping bubbles */
     padding-block: var(--cards-gap);
     position: sticky;
     z-index: 2;
